[gd_scene load_steps=4 format=3 uid="uid://c2ctjqr4lbr1o"]

[ext_resource type="Script" path="res://scripts/ingredient_actived.gd" id="1_ifewg"]
[ext_resource type="Texture2D" uid="uid://cixmbvoer3s7m" path="res://assets/Slot.png" id="2_m6uex"]
[ext_resource type="PackedScene" uid="uid://bvhhe2rda3g3e" path="res://scenes/button_shade.tscn" id="3_x3a14"]

[node name="SlotsIngredients" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ifewg")

[node name="SlotSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_m6uex")
centered = false

[node name="ingredientSprite" type="Sprite2D" parent="."]
centered = false

[node name="ButtonShade" parent="." instance=ExtResource("3_x3a14")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 128.0
offset_bottom = 128.0
grow_horizontal = 1
grow_vertical = 1
focus_mode = 1

[connection signal="pressed" from="ButtonShade" to="." method="Selected"]
